# allure-rust

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  allurerc.mjs
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/allure-cargotest/: Cargo.toml  README.md
crates/allure-cargotest/src/: labels.rs  lib.rs  test_utils.rs  testplan.rs  testplan_tests.rs
crates/allure-cargotest/tests/: e2e.rs
crates/allure-cargotest/tests/samples/: Cargo.toml
crates/allure-cargotest/tests/samples/tests/: attachments.rs  default_and_global_labels.rs  descriptions.rs  failing.rs  labels.rs  selective.rs
crates/allure-cargotest/tests/support/: mod.rs
crates/allure-diesel/: Cargo.toml  README.md
crates/allure-diesel/src/: lib.rs  tests.rs
crates/allure-reqwest/: Cargo.toml  README.md
crates/allure-reqwest/src/: lib.rs  tests.rs
crates/allure-rust-commons/: Cargo.toml  README.md
crates/allure-rust-commons/src/: config.rs  current_owner.rs  error_classifier.rs  facade.rs  facade_tests.rs  http_exchange.rs  http_exchange_tests.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  md5.rs  md5_tests.rs  model.rs  reporter.rs  test_utils.rs  writer.rs  writer_tests.rs
crates/allure-test-macros/: Cargo.toml  README.md
crates/allure-test-macros/src/: doc_comments.rs  lib.rs
docs/: allure-test-agent.md
scripts/: check-cargotest-samples.sh  check-cargotest-smoke.sh
smokes/allure-cargotest/: Cargo.toml  expected-fullnames.txt
smokes/allure-cargotest/tests/: assertions.rs  attachments.rs  concurrent_metadata.rs  default_and_global_labels.rs  descriptions.rs  failing.rs  functions.rs  identifiers.rs  labels.rs  links.rs  parameters.rs  result_return.rs  runtime.rs  selective.rs  should_panic.rs  steps.rs  termination_return.rs  tokio_async.rs  tokio_async_results.rs  tokio_async_should_panic.rs  tokio_async_termination.rs
