[package]
name = "allure-diesel"
version.workspace = true
edition.workspace = true
# Diesel 2.3's instrumentation API requires a newer toolchain than the rest of the
# workspace, so this crate declares its own MSRV instead of inheriting 1.74.
rust-version = "1.86"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/allure-diesel"
readme = "README.md"
description = "Diesel integration for recording executed queries as Allure steps."
keywords.workspace = true
categories.workspace = true

[dependencies]
allure-rust-commons = { version = "1.3.0", path = "../allure-rust-commons" }
diesel = { version = "2.2", default-features = false }

[dev-dependencies]
allure-cargotest = { version = "1.3.0", path = "../allure-cargotest" }
diesel = { version = "2.2", default-features = false, features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
serde_json = "1"

[package.metadata.allure.labels]
module = "allure-diesel"
