[package]
name = "allure-reqwest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/allure-reqwest"
readme = "README.md"
description = "Reqwest integration for generating Allure HTTP exchange attachments."
keywords.workspace = true
categories.workspace = true

[features]
default = []
middleware = ["dep:async-trait", "dep:reqwest-middleware"]

[dependencies]
allure-rust-commons = { version = "1.0.2", path = "../allure-rust-commons" }
async-trait = { version = "0.1", optional = true }
base64 = "0.22"
bytes = "1"
http = "1"
reqwest = { version = "0.12", default-features = false }
reqwest-middleware = { version = "0.4.2", default-features = false, optional = true }

[dev-dependencies]
allure-cargotest = { version = "1.0.2", path = "../allure-cargotest" }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[package.metadata.allure.labels]
module = "allure-reqwest"
